feat: solution for task#6
